<resources>
    <string name="app_name">Family Map</string>
    <string name="title_activity_main">Family Map</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="welcome">Welcome to Family Map!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_toast">Now registering&#8230; Please wait.</string>
    <string name="login_toast">Logging you in&#8230;</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_filter">Filter</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="default_map_event_text">Click an event to see its information.</string>
    <string name="lifeEvents">{fa-area-chart} Life Events</string>
    <string name="familyInfo">{fa-home} Family</string>
    <string name="filterLabel">Family Map: Filter</string>
    <string name="settingsLabel">Family Map: Settings</string>
    <string name="personLabel">Family Map: Person Details</string>
    <string name="searchLabel">Family Map: Search</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="resync_data">Re-sync Data</string>
    <string name="logout">Logout</string>
    <string name="map_type">Map Type</string>
    <string-array name="color_select">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>
    <string-array name="map_type">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Hybrid</item>
        <item>Terrain</item>
    </string-array>
</resources>
