<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="client.familymap.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="9">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="center"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/loginLine1Text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:gravity="end"
                android:text="@string/server_host" />

            <EditText
                android:id="@+id/loginServerHost"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/loginLine2Text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:gravity="end"
                android:text="@string/server_port" />

            <EditText
                android:id="@+id/loginServerPort"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/loginLine3Text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:gravity="end"
                android:text="@string/username" />

            <EditText
                android:id="@+id/loginUserName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/loginLine4Text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:gravity="end"
                android:text="@string/password" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="4"
                android:inputType="textPassword"
                android:text="" />

            <TextView
                android:id="@+id/loginLine5Text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="5"
                android:gravity="end"
                android:text="@string/firstName" />

            <EditText
                android:id="@+id/loginFirstName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="5"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/loginLine6Text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="6"
                android:gravity="end"
                android:text="@string/lastName" />

            <EditText
                android:id="@+id/loginLastName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="6"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/loginLine7Text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="7"
                android:gravity="end"
                android:text="@string/email" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="7"
                android:inputType="textEmailAddress"
                android:text="" />

            <TextView
                android:id="@+id/loginLine8Text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="8"
                android:gravity="end|bottom"
                android:text="@string/gender"
                android:layout_marginEnd="20dp"/>

            <RadioGroup
                android:layout_column="1"
                android:layout_row="8"
                android:orientation="horizontal"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:id="@+id/maleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/femaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>

            </RadioGroup>
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
